# amphibious_robot_ws

./: .gitmodules  README.md  test.txt  程序功能.txt
Libraries/StdPeriph_Driver/src/: stm32f10x_can.c
Project/: JLinkLog.txt  Project.uvgui_Administrator.bak  Project.uvguix.WHUTWZH  Project.uvopt  Project.uvoptx
User/: main - 副本.c
User/inc/: CPG.h  Drive_CPG.h  Drive_common.h  KEY.H  LED.H  Timer.h  gait.h
User/src/: Drive_common.c  SysTick.c  Timer.c  can.c  diskio.c  ff.c  flipperleg.c  gait.c  sdio_sdcard.c
active_slam/: README.md  package.xml
active_slam/active_localization/: CMakeLists.txt  package.xml
active_slam/active_localization/launch/: active_localization.launch
active_slam/active_localization/src/: active_localization_node.cpp
active_slam/information_filed/: README.md
active_slam/information_filed/gflags/: cmake_install.cmake  gflags-config.cmake  gflags-nonamespace-targets.cmake
active_slam/information_filed/glog/: demangle_unittest  signalhandler_unittest  symbolize_pie_unittest  symbolize_unittest  utilities_unittest
active_slam/information_filed/glog/.libs/: demangle_unittest  libglog.lai  logging_unittest
active_slam/information_filed/glog/src/.deps/: libglog_la-demangle.Plo
active_slam/information_filed/rpg_information_field/: README.md  point
active_slam/information_filed/rpg_information_field/act_map/exp/: exp_best_orient_nrsl.cpp
active_slam/information_filed/rpg_information_field/act_map/include/act_map/: act_map.h  kernel_layer_integrator.h  voxblox_utils.h
active_slam/information_filed/rpg_information_field/act_map/scripts/: exp_optim_orient.py  exp_optim_orient_nrsl.py  exp_plot.py
active_slam/information_filed/rpg_information_field/act_map/src/: sampler.cpp  voxblox_utils.cpp
active_slam/information_filed/rpg_information_field/act_map_ros/: CMakeLists.txt
active_slam/information_filed/rpg_information_field/act_map_ros/cfgs/: full_exp_mesh.rviz
active_slam/information_filed/rpg_information_field/act_map_ros/include/act_map_ros/: act_map_server_inl.h
active_slam/information_filed/rpg_information_field/act_map_ros/launch/: info_map_full_euroc.launch  nrsl_d435i.launch  nrsl_optimization.launch  trace_map_full_euroc.launch
active_slam/information_filed/rpg_information_field/act_map_ros/params/: nrsl_d435i.yaml
active_slam/information_filed/rpg_information_field/act_map_ros/src/: common_ros.cpp  nrsl_optimization_node.cpp
active_slam/launch/: active_slam.launch
active_slam/src/: active_slam_node.cpp
active_slam/view_controller/: CMakeLists.txt  README.md  package.xml
active_slam/view_controller/launch/: view_controller.launch
active_slam/view_controller/src/: view_controller_server.cpp
active_slam/view_controller/srv/: ControlView.srv
ar_slam_ros/: README.md
ar_slam_ros/config/: vins_rviz_config.rviz
ar_slam_ros/feature_tracker/: CMakeLists.txt
ar_slam_ros/svo/: CMakeLists.txt
ar_slam_ros/vins_estimator/: package.xml
devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
drivers/: README.md
drivers/buildLibrealsense2TX2/: installLibrealsense.sh
exposure/: README.md
exposure/exposure_controller/: CMakeLists.txt
exposure/exposure_controller/launch/: exposure_controller.launch
exposure/exposure_controller/src/: camera_grad.cpp  camera_optimization.cpp  plot_exposure_time.py
exposure/feature_tracker/: CMakeLists.txt  README.md  feature_tracker.cpp
information_filed/gflags/: gflags-config-install.cmake  install_manifest.txt
information_filed/glog/: libtool  logging_striptest10
logs/slam/: build.cmake.000.log.stderr
navigation/launch/: all.rviz
src/: README.md
src/active_slam/: CMakeLists.txt  README.md  package.xml
src/ar_slam_ros/: CMakeLists.txt  README.md  package.xml
src/ar_slam_ros/camera_model/: CMakeLists.txt
src/ar_slam_ros/config/euroc/: euroc_config.yaml
src/ar_slam_ros/config/realsense/: nrsl_realsense_d435_825312073422.yaml  nrsl_realsense_d435i_841512071464.yaml  nrsl_realsense_d435i_841512071464_compare.yaml  nrsl_realsense_d435i_config.yaml
src/ar_slam_ros/feature_tracker/: CMakeLists.txt
src/ar_slam_ros/feature_tracker/src/: BRIEF.cpp  feature_tracker.cpp  feature_tracker.h  feature_tracker_node.cpp  parameters.cpp  parameters.h
src/ar_slam_ros/include/arslam/: Publisher.hpp  Subscriber.hpp
src/ar_slam_ros/launch/: ar_slam_node.launch
src/ar_slam_ros/src/: Publisher.cpp  Subscriber.cpp  ar_slam_node.cpp  test.cpp
src/ar_slam_ros/svo/: CMakeLists.txt
src/ar_slam_ros/svo/include/svo/: frame.h  global.h
src/ar_slam_ros/svo/src/: frame.cpp
src/ar_slam_ros/vins_estimator/: CMakeLists.txt  package.xml
src/ar_slam_ros/vins_estimator/launch/: euroc.launch  nrsl_d435i.launch  nrsl_exposure_exp.launch  realsense_color.launch
src/ar_slam_ros/vins_estimator/src/: PatchMacher.h  PatchMatcher.cpp  PatchMatcher.h  estimator.cpp  estimator.h  estimator_node.cpp  feature_manager.cpp  feature_manager.h  parameters.cpp  parameters.h
src/ar_slam_ros/vins_estimator/src/utility/: visualization.h
src/drivers/: README.md
src/exposure/exposure_controller/: CMakeLists.txt  package.xml
src/exposure/exposure_controller/launch/: exposure_controller.launch
src/exposure/exposure_controller/src/: camera_crf.cpp  camera_fastconer.cpp  camera_optimization.cpp
src/exposure_controller/: CMakeLists.txt  README.md  package.xml
src/exposure_controller/launch/: exposure_controller.launch
src/exposure_controller/src/: exposure_node.cpp  exposure_optimization_node.cpp
src/information_filed/: CMakeLists.txt  README.md  package.xml
src/navigation/: package.xml
src/slam/: CMakeLists.txt  README.md
src/view_controller/: CMakeLists.txt  README.md  ReadMe.txt  package.xml
stm32-0909/Project/: Project.uvgui.Administrator  Project.uvgui.XLH  Project.uvgui_XLH.bak  Project.uvguix.WHUTWZH  Project.uvoptx  Project.uvproj.saved_uv4  Project.uvprojx  Project_STM3210E-XLH.dep  Project_uvopt.bak  Project_uvproj.bak
stm32-0909/User/: main.c
view_controller/src/: view_controller_server.cpp
(+182 files in other folders)
