<?xml version="1.0"?>
<package format="2">
  <name>active_slam</name>
  <version>0.0.0</version>
  <description>The active_slam package</description>

  <maintainer email="songjinxs@163.com">songjin</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>roscpp</depend>
  <depend>act_map_msgs</depend>
  <depend>view_controller</depend>
  <depend>eigen_catkin</depend>
  <depend>glog_catkin</depend>
  <export>

  </export>
</package>
