<?xml version="1.0"?>
<package format="2">
  <name>view_controller</name>
  <version>0.0.0</version>
  <description>The view_controller package</description>

  <maintainer email="TODO@todo.com">todo</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <depend>roscpp</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>eigen_catkin</depend>

  <export>

  </export>
</package>
