<?xml version="1.0"?>
<package format="2">
  <name>exposure_controller</name>
  <version>0.0.0</version>
  <description>The exposure_controller package</description>

  <maintainer email="TODO@todo.com">todo</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>eigen_catkin</depend>
  <depend>cv_bridge</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>realsense2_camera</depend>
  <export>

  </export>
</package>
